Add file writing capability.